@@ -2675,7 +2675,7 @@ AT_CLEANUP
 
 
 AT_SETUP([CALL C with callback, PROCEDURE DIVISION EXTERN])
-AT_KEYWORDS([runmisc])
+AT_KEYWORDS([runmisc extensions])
 
 AT_DATA([prog.cob], [
        IDENTIFICATION   DIVISION.
@@ -2698,6 +2698,72 @@ AT_DATA([prog.cob], [
        01 P2            USAGE BINARY-LONG.
        01 P3            PIC X(8).
        PROCEDURE        DIVISION EXTERN USING 
+                        BY VALUE P1 P2 BY REFERENCE P3.
+           IF P1 NOT EQUAL ADDRESS OF P3
+              DISPLAY P1
+              END-DISPLAY
+           END-IF
+           IF P2 NOT EQUAL 42
+              DISPLAY P2
+              END-DISPLAY
+           END-IF
+           IF P3 NOT EQUAL "CALLBACK"
+              DISPLAY P3
+              END-DISPLAY
+           END-IF
+           EXIT PROGRAM. 
+])
+
+AT_DATA([cprog.c], [[
+#include <libcob.h>
+
+int
+cprog(void *cb)
+{
+    char *p1;
+    int p2 = 42;
+    char *p3 = "CALLBACK";
+
+    p1 = p3;
+    ((int (*)(char *, int, char *))cb)(p1, p2, p3);
+	return 0;
+}
+]])
+
+AT_CHECK([$COMPILE -Wno-unfinished -o prog prog.cob cprog.c], [0], [], [])
+AT_CHECK([./prog], [0], [], [])
+
+AT_CLEANUP
+
+
+AT_SETUP([CALL C with callback, ENTRY-CONVENTION EXTERN])
+AT_KEYWORDS([runmisc])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      prog.
+       OPTIONS.
+           ENTRY-CONVENTION COBOL.
+       DATA             DIVISION.
+       WORKING-STORAGE  SECTION.
+       01 CB            USAGE PROGRAM-POINTER.
+       PROCEDURE        DIVISION.
+           SET CB TO ENTRY "callback"
+           CALL STATIC "cprog" USING BY VALUE CB
+           END-CALL
+           EXIT PROGRAM.
+       END PROGRAM prog.
+
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      callback.
+       OPTIONS.
+           ENTRY-CONVENTION EXTERN.
+       DATA             DIVISION.
+       LINKAGE          SECTION.
+       01 P1            USAGE POINTER.
+       01 P2            USAGE BINARY-LONG.
+       01 P3            PIC X(8).
+       PROCEDURE        DIVISION USING 
                         BY VALUE P1 P2 BY REFERENCE P3.
            IF P1 NOT EQUAL ADDRESS OF P3
               DISPLAY P1
@@ -5546,3 +5612,31 @@ libcob: prog.cob: 35: warning: cob_put_picx_param: attempt to over-write constan
 
 AT_CLEANUP
 
+AT_SETUP([DEFAULT ROUNDED MODE])
+AT_KEYWORDS([runmisc])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION  DIVISION.
+       PROGRAM-ID.     prog.
+       OPTIONS.
+           DEFAULT ROUNDED NEAREST-EVEN.
+           
+       DATA            DIVISION.
+       WORKING-STORAGE SECTION.
+       01  x           PIC 9.
+           
+       PROCEDURE       DIVISION.
+           COMPUTE x ROUNDED = 1.5
+           DISPLAY x
+           COMPUTE x ROUNDED = 2.5
+           DISPLAY x
+           .
+])
+
+AT_CHECK([$COMPILE -o prog prog.cob], [0], [], [])
+AT_CHECK([./prog], [0],
+[2
+2
+])
+
+AT_CLEANUP
