@@ -1,4 +1,10 @@
 
+2017-01-22  Edward Hart <edward.dan.hart@gmail.com>
+
+	* cobc.h: added CB_CS_OPTIONS.
+	* parser.y: added the OPTIONS paragraph, with DEFAULT ROUNDED MODE and
+	  ENTRY-CONVENTION implemented.
+
 2017-01-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	FR #194: generate a WinMain() function instead of main
